CB-10722 Set AWS root cert ID when creating RDS
Contents:
* Extend Redbeams "root certificate registry" entries with cloud
  provider specific ID ("CloudProviderIdentifier"). This is currently
  only relevant for AWS, but Azure entries also include the PEM file
  name without extension as the CloudProviderIdentifier.
* Keep track of the active CloudProviderIdentifier for each newly
  launched DB server in DBStack.sslConfig, and return it in
  DatabaseServerV4Response.sslConfig.
* Provide the desired CloudProviderIdentifier to AWS RDS upon launch.
  This is a new optional dynamic parameter in DatabaseServer.
  If omitted (the legacy behavior), the RDS will be brought up with
  whatever the default SSL root cert is for the target account. While it
  is not possible to query the default SSL root cert directly, the RDS
  DescribeCertificates operation can at least return the list of
  CloudProviderIdentifier values supported for the target account.
  (This does not seem to be region-dependent, but the AmazonRdsClient is
  nevertheless instantiated for the target region.)
  * No CloudProviderIdentifier will be prescribed if it is the only
  one supported as per DescribeCertificates. This is not only an
  optimization but it also avoids some extra time during RDS launch.
  See CB-11387 for details.
* After AWS RDS launch completes, its CloudProviderIdentifier will be
  queried and synced back to DBStack.sslConfig. If possible, the version
  and PEM fields will be also updated.
* Manual tests: local CB, AWS & Azure, with and without DB SSL, DB SSL
  with and without CloudProviderIdentifier prescription.
* Add some unit test support classes: AbstractActionTestSupport,
  ExceptionCatcherEventHandlerTestSupport. These provide means for the
  invocation of protected methods or the usage of protected nested types
  that would be otherwise inaccessible outside the parent package.
* Add new unit tests (JUnit 5 & AssertJ) and amend existing ones.
  Existing unit tests have been mi