@@ -1,20 +1,21 @@
 package com.sequenceiq.cloudbreak.cloud.aws.connector.resource;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
-import static org.mockito.MockitoAnnotations.initMocks;
 
-import java.util.Arrays;
 import java.util.List;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import com.amazonaws.services.rds.model.DBInstance;
 import com.amazonaws.services.rds.model.DBInstanceNotFoundException;
@@ -32,7 +33,11 @@ import com.sequenceiq.cloudbreak.cloud.model.DatabaseStack;
 import com.sequenceiq.cloudbreak.cloud.model.ExternalDatabaseStatus;
 import com.sequenceiq.cloudbreak.cloud.model.Location;
 import com.sequenceiq.cloudbreak.cloud.model.Region;
+import com.sequenceiq.cloudbreak.cloud.model.database.CloudDatabaseServerSslCertificate;
+import com.sequenceiq.cloudbreak.cloud.model.database.CloudDatabaseServerSslCertificateType;
 
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class AwsRdsStatusLookupServiceTest {
 
     private static final String REGION = "region";
@@ -44,6 +49,8 @@ public class AwsRdsStatusLookupServiceTest {
     private static final String DB_INSTANCE_STATUS_STOPPED = "stopped";
 
     private static final String DB_INSTANCE_STATUS_ANY = "any";
+
+    private static final String CA_CERTIFICATE_IDENTIFIER = "mycert";
 
     @Mock
     private AwsClient awsClient;
@@ -81,10 +88,8 @@ public class AwsRdsStatusLookupServiceTest {
     @InjectMocks
     private AwsRdsStatusLookupService victim;
 
-    @Before
+    @BeforeEach
     public void initTests() {
-        initMocks(this);
-
         when(authenticatedContext.getCloudCredential()).thenReturn(cloudCredential);
         when(authenticatedContext.getCloudContext()).thenReturn(cloudContext);
         when(cloudContext.getLocation()).thenReturn(location);
@@ -98,34 +103,34 @@ public class AwsRdsStatusLookupServiceTest {
     @Test
     public void shouldLookupStartedExternalDatabaseStatus() {
         when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenReturn(describeDBInstancesResult);
-        when(describeDBInstancesResult.getDBInstances()).thenReturn(Arrays.asList(dbInstance));
+        when(describeDBInstancesResult.getDBInstances()).thenReturn(List.of(dbInstance));
         when(dbInstance.getDBInstanceStatus()).thenReturn(DB_INSTANCE_STATUS_STARTED);
 
         ExternalDatabaseStatus result = victim.getStatus(authenticatedContext, dbStack);
 
-        assertEquals(ExternalDatabaseStatus.STARTED, result);
+        assertThat(result).isEqualTo(ExternalDatabaseStatus.STARTED);
     }
 
     @Test
     public void shouldLookupStoppedExternalDatabaseStatus() {
         when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenReturn(describeDBInstancesResult);
-        when(describeDBInstancesResult.getDBInstances()).thenReturn(Arrays.asList(dbInstance));
+        when(describeDBInstancesResult.getDBInstances()).thenReturn(List.of(dbInstance));
         when(dbInstance.getDBInstanceStatus()).thenReturn(DB_INSTANCE_STATUS_STOPPED);
 
         ExternalDatabaseStatus result = victim.getStatus(authenticatedContext, dbStack);
 
-        assertEquals(ExternalDatabaseStatus.STOPPED, result);
+        assertThat(result).isEqualTo(ExternalDatabaseStatus.STOPPED);
     }
 
     @Test
     public void shouldLookupUpdateInProgressExternalDatabaseStatus() {
         when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenReturn(describeDBInstancesResult);
-        when(describeDBInstancesResult.getDBInstances()).thenReturn(Arrays.asList(dbInstance));
+        when(describeDBInstancesResult.getDBInstances()).thenReturn(List.of(dbInstance));
         when(dbInstance.getDBInstanceStatus()).thenReturn(DB_INSTANCE_STATUS_ANY);
 
         ExternalDatabaseStatus result = victim.getStatus(authenticatedContext, dbStack);
 
-        assertEquals(ExternalDatabaseStatus.UPDATE_IN_PROGRESS, result);
+        assertThat(result).isEqualTo(ExternalDatabaseStatus.UPDATE_IN_PROGRESS);
     }
 
     @Test
@@ -134,40 +139,100 @@ public class AwsRdsStatusLookupServiceTest {
 
         ExternalDatabaseStatus result = victim.getStatus(authenticatedContext, dbStack);
 
-        assertEquals(ExternalDatabaseStatus.DELETED, result);
+        assertThat(result).isEqualTo(ExternalDatabaseStatus.DELETED);
     }
 
-    @Test(expected = CloudConnectorException.class)
+    @Test()
     public void shouldThrowCloudConnectorExceptionInCaseOfAnyRuntimeException() {
         when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenThrow(RuntimeException.class);
 
-        victim.getStatus(authenticatedContext, dbStack);
+        assertThrows(CloudConnectorException.class, () -> victim.getStatus(authenticatedContext, dbStack));
     }
 
     @Test
     public void isDeleteProtectionEnabledTest() {
-        when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenReturn(describeDBInstancesResult);
-        when(describeDBInstancesResult.getDBInstances()).thenReturn(Arrays.asList(dbInstance));
-        DescribeDBInstancesResult describeDBInstancesResult = mock(DescribeDBInstancesResult.class);
-        DBInstance dbInstance = mock(DBInstance.class);
         when(describeDBInstancesResult.getDBInstances()).thenReturn(List.of(dbInstance));
         when(dbInstance.getDeletionProtection()).thenReturn(true);
 
         boolean result = victim.isDeleteProtectionEnabled(describeDBInstancesResult);
-        assertEquals(true, result);
+        assertThat(result).isTrue();
 
         when(dbInstance.getDeletionProtection()).thenReturn(false);
 
         result = victim.isDeleteProtectionEnabled(describeDBInstancesResult);
-        assertEquals(false, result);
+        assertThat(result).isFalse();
     }
 
-    public void isDeleteProtectionEnabledShouldThrowCloudConnectorExceptionInCaseOfDBInstanceNotFoundException() {
-        when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenThrow(DBInstanceNotFoundException.class);
-        DescribeDBInstancesResult describeDBInstancesResult = mock(DescribeDBInstancesResult.class);
-        victim.isDeleteProtectionEnabled(describeDBInstancesResult);
+    @Test
+    public void isDeleteProtectionEnabledShouldReturnFalseInCaseOfDBInstanceNotFound() {
+        boolean result = victim.isDeleteProtectionEnabled(null);
 
         //if AWS returns that DBInstance does not exist, then we shall consider this as the termination protection is not enabled
-        assertFalse(victim.isDeleteProtectionEnabled(describeDBInstancesResult));
+        assertThat(result).isFalse();
     }
+
+    @Test
+    void isDbStackExistOnProviderSideTestWhenNull() {
+        assertThat(victim.isDbStackExistOnProviderSide(null)).isFalse();
+    }
+
+    @Test
+    void isDbStackExistOnProviderSideTestWhenNotNull() {
+        assertThat(victim.isDbStackExistOnProviderSide(describeDBInstancesResult)).isTrue();
+    }
+
+    @Test
+    void getDescribeDBInstancesResultForDeleteProtectionTestWhenSuccess() {
+        when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenReturn(describeDBInstancesResult);
+
+        DescribeDBInstancesResult result = victim.getDescribeDBInstancesResultForDeleteProtection(authenticatedContext, dbStack);
+
+        assertThat(result).isSameAs(describeDBInstancesResult);
+    }
+
+    @Test
+    void getDescribeDBInstancesResultForDeleteProtectionTestWhenDBInstanceNotFoundException() {
+        when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenThrow(DBInstanceNotFoundException.class);
+
+        DescribeDBInstancesResult result = victim.getDescribeDBInstancesResultForDeleteProtection(authenticatedContext, dbStack);
+
+        assertThat(result).isNull();
+    }
+
+    @Test
+    void getDescribeDBInstancesResultForDeleteProtectionTestWhenRuntimeExceptionThenThrowCloudConnectorException() {
+        when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenThrow(RuntimeException.class);
+
+        assertThrows(CloudConnectorException.class, () -> victim.getDescribeDBInstancesResultForDeleteProtection(authenticatedContext, dbStack));
+    }
+
+    @Test
+    void getActiveSslRootCertificateTestWhenSuccess() {
+        when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenReturn(describeDBInstancesResult);
+        when(describeDBInstancesResult.getDBInstances()).thenReturn(List.of(dbInstance));
+        when(dbInstance.getCACertificateIdentifier()).thenReturn(CA_CERTIFICATE_IDENTIFIER);
+
+        CloudDatabaseServerSslCertificate result = victim.getActiveSslRootCertificate(authenticatedContext, dbStack);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getCertificateType()).isEqualTo(CloudDatabaseServerSslCertificateType.ROOT);
+        assertThat(result.getCertificateIdentifier()).isEqualTo(CA_CERTIFICATE_IDENTIFIER);
+    }
+
+    @Test
+    void getActiveSslRootCertificateTestWhenDBInstanceNotFoundException() {
+        when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenThrow(DBInstanceNotFoundException.class);
+
+        CloudDatabaseServerSslCertificate result = victim.getActiveSslRootCertificate(authenticatedContext, dbStack);
+
+        assertThat(result).isNull();
+    }
+
+    @Test
+    void getActiveSslRootCertificateTestTestWhenRuntimeExceptionThenThrowCloudConnectorException() {
+        when(amazonRDS.describeDBInstances(any(DescribeDBInstancesRequest.class))).thenThrow(RuntimeException.class);
+
+        assertThrows(CloudConnectorException.class, () -> victim.getActiveSslRootCertificate(authenticatedContext, dbStack));
+    }
+
 }
